info : the insert is working and dataBase receives the call